--- a/app/views/home/e100.html.erb
+++ b/app/views/home/e100.html.erb
@@ -2,7 +2,7 @@
   
      <% @masters.each_with_index do |mstr| %>
      
-    　　 <li><%= mstr.j %><br>  <%= mstr.e %></li>
+    　　 <li><%= mstr.dt %><br> <%= mstr.j %></li>
           
      <% end %>
   
