--- a/app/views/home/master.html.erb
+++ b/app/views/home/master.html.erb
@@ -4,7 +4,7 @@
      
       <% @categories.each do |ctg| %>
         
-           <li><a href="<%= home_e100_path(category_id: ctg.id) %>"><%= ctg.ctg %></a></li>
+           <li><a href="<%= home_e100_path(category_id: ctg.id) %>"><%= ctg.ctg %></li>
        
       <% end %> 
        
