--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       
     <a class="navbar-brand">
 		  
-				<span ><i class="fa fa-rebel" style="color: white">　自動翻訳システム</i></span>
+				<span ><i class="fa fa-rebel" style="color: white">　日報音声入力システム</i></span>
 				
 	<!--	<form method="get" action="/home/ibmttsj">
 			   
