--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,34 +10,34 @@
 
 <button id="stcap" onclick="recstop()">音声入力停止</button></div><a id="recap">現在音声入力停止中</a></i></div>
 
-<div><%= form_tag(url_for(:action => 'index'), :remote => true) do %>
+<div><textarea id="result_text" rows="10" cols="60" ></textarea></div>
 
-  <div><%= text_area_tag :transval, nil, placeholder: "", id:"result_text", size: "60x10" %></div>
-  <div><label class="translabel" ></label>
-  <button id="tbtn" onclick="trans()">翻訳</button>
-  
-<div><textarea id="txtTarget" rows="10" cols="60" ></textarea></div>
-
-<% end %></div>
-
-<button class="mic1" type="submit" onclick ="speak()">
-    
-      <i class="fa fa-volume-up fa-3x"><a class="rcap">もう一度しゃべる</a></i>
-      
-</button>
+<div><input type="text" id="hi"></div><br>
 
 <button id="tclear" onclick="txtclear()">テキストクリア</button>
-<!--<a href="/home/ctg">登録ページへ</a>-->
 
-
-  
- <button id= "tlink">登録ページへ</button><br>
+ <button id= "tlink">日報登録画面へ</button><br>
  
- <button id= "blink">登録された文章ページへ</button>
+ <button id= "blink">過去の日報閲覧</button>
  
  
  
 <script>
+$(function(){
+//今日の日付データを変数hidukeに格納
+var hiduke=new Date(); 
+
+//年・月・日・曜日を取得する
+var year = hiduke.getFullYear();
+var month = hiduke.getMonth()+1;
+var week = hiduke.getDay();
+var day = hiduke.getDate();
+
+var yobi= new Array("日","月","火","水","木","金","土");
+
+ $('#hi').val(year+"年"+month+"月"+day+"日 "+yobi[week]+"曜日");
+
+});
 
 $(function(){
     
@@ -56,23 +56,15 @@ $(function(){
         
         var param = $("#result_text").val();
         param = encodeURIComponent(param);
-         
-        var paramt = $("#txtTarget").val();
-        paramt= encodeURIComponent(paramt);
-        
+      
           //文字が入ってる時だけ実行
         if (param != ""){
              
-            if (paramt != ""){
+            
       
-             window.location.href="/home/ctg?param=" + param +"&" + "?paramt=" + paramt;
+             window.location.href="/home/ctg?param=" + param;
       　　　
-      　　　 }else{
-      　　　 
-      　　　 alert('翻訳文がありません' );
-      　　　     
-      　　　}
-      　　　
+      　　
         }else{
             
             
@@ -85,67 +77,41 @@ $(function(){
 });
 
 
- var stopflag=1; //録音状態　1: 停止状態　0:録音中状態
+  var stopflag=1; //録音状態　1: 停止状態　0:録音中状態
+　
+ //var jeflag=1; //言語切り替えフラグ　1: 日本語　0:英語
 
- var jeflag=1; //言語切り替えフラグ　1: 日本語　0:英語
-
- var gid; //言語判定　1: 日本語　0:英語
+ //var gid; //言語判定　1: 日本語　0:英語
  
-　 // 録音(音声認識)による翻訳開始
+　 // 録音(音声認識)
 　function recstart() { //音声入力開始
+　　　　
 　      $('#recap').hide();//現在音声入力停止中
-　     
+　      
 　      if (stopflag==1) { //停止状態なら　初期状態
 　     　  console.log('初期状態');
 　         recognition.start();//startして
 　         stopflag=0;//start状態にする
-　           var txt;
-　           if (jeflag==1) {
+　          
+　         
 　               
     　         $('#rscap').text("");//音声入力開始を消す
-          　   $('#rscap').text("日本語認識中..");
+          　   $('#rscap').text("音声認識中..");
               tenmetu('mic');//点滅
     　         $('#rscap').css('color','green'); 
-                gid=1;
-                
-　           } else {
-　               
-　                $('#rscap').text("");//音声入力開始を消す
-              　   $('#rscap').text("英語認識中....");
-                  tenmetue('mic');//点滅
-　 　             $('#rscap').css('color', 'Red');
-                gid=0;
-　               
-　           }
+             
 　           
 　     } else {　//録音中なら
 　        console.log('録音中');
 　     
-           if (jeflag==1) {
-               
-                   recognition.stop()
+         
+                   // recognition.stop()
                    
-                   jeflag=0;
-                   
-                      $('#rscap').text("");//音声入力開始を消す
-                  　   $('#rscap').text("英語認識中....");
-                      tenmetue('mic');//点滅
-                    $('#rscap').css('color', 'Red');
-                    gid=0;
-                    
-                   
-                } else {
-                    recognition.stop()
-                   
-                    jeflag=1;
-                    
                      $('#rscap').text("");//音声入力開始を消す
-                  　 $('#rscap').text("日本語認識中..");
+                  　 $('#rscap').text("音声認識中..");
                      tenmetu('mic');//点滅
                     $('#rscap').css('color', 'green');
-                    gid=1;
-                
-                }
+               
     
 　     }         
 　     
@@ -159,53 +125,38 @@ $(function(){
         $('#rscap').css('color', 'black');
         $('.mic').css('background-color', 'white');
         $('#recap').show();
-        $('.translabel').text("");
+     
 　      
 　  }
 　 
-　 window.SpeechRecognition = window.SpeechRecognition || webkitSpeechRecognition;
+ 　window.SpeechRecognition = window.SpeechRecognition || webkitSpeechRecognition;
            var recognition = new webkitSpeechRecognition();
            recognition.interimResults = true;
         　 recognition.continuous = true;
            //最大2個の認識仮説を取得する
            //recognition.maxAlternatives = 2;
-           
-           recognition.onstart = function() {
-                 if (gid==1) { 
+                
+
+   recognition.onstart = function() {
+               
                    recognition.lang='ja-JP';
                    console.log("日本語認識中");
-                 } else {
-                     
-                      recognition.lang='en-US';
-                　　　console.log("英語認識中");
-                 }
-             　　
-             　　recognition.onnomatch = function() {
                
-               　　　 $('#result_text').text("もう一度試してください");
-               
-          　　　  };
+             　
             
             };
-            
-             recognition.onspeechstart= function() {
+
+　　　recognition.onspeechstart= function() {
                  
-                 if (gid==1) { 
-                     
+             
                    recognition.lang='ja-JP';
                    console.log("会話中日本語認識中");
                    
-                 } else {
-                     
-                  recognition.lang='en-US';
-            　　　console.log("録音状態からリスタート");
-                 } 
+               
              
              };   
                  
-            
-         
-            recognition.onend= function() {
+        recognition.onend= function() {
                 
                 if (stopflag==0) { 
                     
@@ -213,194 +164,38 @@ $(function(){
                  
                  }
                 
-            }
+            };
             
-           
-            recognition.onresult = function(event) {
+             var txtf="";
+             recognition.onresult = function(event) {
                 var results = event.results;
+                var lgth=0;
+                var txt;
+                
                 for (var i = event.resultIndex; i < results.length; i++) {
+                   
                     if (results[i].isFinal) {
+                      if (txtf=="") {
+                          
+                          txt=results[i][0].transcript;
+                          txtf=txt;
+                          console.log(txtf);
+                          $('#result_text').text(txtf);
+                      } else {
+                          
+                          txt=results[i][0].transcript;
+                          txtf=txtf+"。"+"\n"+txt; 
+                          
+                           console.log(txtf);
+                        $('#result_text').text(txtf);
+                      }
+                      
                        
-                          $('#result_text').text(results[i][0].transcript);
-                         
-                          gengochk(results[i][0].transcript);
-                         
-                          $("#tbtn").click();//翻訳開始
-                       
-                         }
-                     
                     }
-                };
-                
-                if (stopflag==0) {　//録音中なら
-                
-                   recognition.onend = () => { recognition.start() };
-                
-                }
-
-               // recognition.start();
-
-   /*ここまで録音による翻訳*/
-
-//#result_textに文字を直接入力またはコピペした場合の翻訳
-//言語判定　gid取得 　1: 日本語　0:英語
- function gengochk(value) { // 録音による翻訳の言語判定（日本語か英語か）に使う
-　    
-                let error;
-                
-                if(value.match(/[ぁ-ん]/g)){ //ひらがな含む
                     
-                  error = true;
-                  
-                } else if (value.match(/[\u4E00-\u9FFF]/)) {　//漢字のみ　例えば　「明日」など
+                }
+              };
             
-                　 error = true; 
-                  
-                }
-                
-                if(error){
-                    
-                    gid=1;
-                    console.log("japanese!"+gid);
-                   
-                 
-                }else{
-                    
-                    gid=0;
-                    console.log("english!"+gid);
-                   
-                }
-   
-　}
-//$(function() {
-  
- 　$("#result_text").keyup(function(e){
- 　   
-     if(e.which == 13){　//エンターキー　アップ時
-               //result_text"の言語判定　gid取得
-         　　　　　let error;
-                let value = $(this).val();
-                
-                if(value.match(/[ぁ-ん]/g)){
-                    
-                  error = true;
-                } else if (value.match(/[\u4E00-\u9FFF]/)) {
-                    
-                   error = true; 
-                  //m = t.match(/[\u4E00-\u9FFF]/); 
-                  
-                }
-                
-                if(error){
-                    
-                    gid=1;
-                    console.log("japanese!"+gid);
-                　  
-                    $("#tbtn").click();//翻訳開始
-                    
-                }else{
-                    
-                    gid=0;
-                    console.log("english!"+gid);
-                   
-                    $("#tbtn").click();//翻訳開始
-                    
-                }
-                //ここまで#result_textに文字を直接入力またはコピペした場合の翻訳
-　　　　　
-     }
-     
-　});
-　
-//}); 
-
-//翻訳→音声合成
-function trans() {
-    
-     var txt1;
-    
-　   txt1="翻訳中..........."
-　   wfin(txt1,'translabel');//1文字ずつタイプライター風に表示する
-　   
-  //helpers/home_helper.rb  translate英訳　translatej 和訳
-  if(gid==1) {
-       
-       var transtext="<%= translatej %>";
-       
-       
-     } else {
-     
-       var transtext="<%= translate%>";
-     
-    　 
-     }  
- 
- var txt=transtext.replace( /&amp;#39;/g , "'" );
-
- $('#txtTarget').val(txt);
- 
- //音声合成
- 
-     // unsupported.
-    /*if (!'SpeechSynthesisUtterance' in window) {
-        alert('Speech synthesis(音声合成) APIには未対応です.');
-        return;
-    }*/
-   
-    var text =  $('#txtTarget').val();
- 
-    var uttr = new SpeechSynthesisUtterance();
-    uttr.text = text;
-    
-     if(gid==1) {
-       uttr.lang = 'en-US';
-     } else {
-     
-        uttr.lang = 'ja-JP';
-     }
- 
-  speechSynthesis.speak(uttr);
-  
- // $(function(){
-      
-    setTimeout(function(){
-        txt1="";
-        $('.translabel').text("");
-        $('.translabel').text("翻訳完了！");
-        tenmetut('translabel');//点滅
-        
-    },2000);
-    
-　// });
-   
-
-}
-
-//もう一度しゃべる
-function speak() {
-
- var text = $('#txtTarget').val();
- 
- if (text!="") {
-
-    var uttr = new SpeechSynthesisUtterance();
-    uttr.text = text;
-    
-    if(gid==1) {
-       uttr.lang = 'en-US';
-      } else {
-      
-         uttr.lang = 'ja-JP';
-     }
-  
-   speechSynthesis.speak(uttr);
-  
-  } else {
-      
-      alert("テキストがありません。")
-  }
- 
-}
 
 function txtclear() {　　//テキストクリア
     
@@ -410,7 +205,7 @@ function txtclear() {　　//テキストクリア
      
 }
 
- function wfin(txt,idv) { //タイプライターのようにテキストを1文字ずつ表示させる関数
+function wfin(txt,idv) { //タイプライターのようにテキストを1文字ずつ表示させる関数
      　　　//txt:テキスト　idv 囲む要素のid
      　　　    var txtArr = txt.split("");
             var count = 0;
@@ -428,7 +223,7 @@ function txtclear() {　　//テキストクリア
 
     }
     
-　//jquery.flicker.jsを使った要素点滅
+    //jquery.flicker.jsを使った要素点滅
 function tenmetu(v) {　//日本語
     
         $('.'+v).flicker({
@@ -443,40 +238,6 @@ function tenmetu(v) {　//日本語
             'pause': 200, //点滅して色がついている時の時間の長さです'color': '#CCFFCC'   
             'delay': 800, //点滅する間隔です
             'color': '#CCFFCC' //色を設定できます*/
-        
-}  
-function tenmetue(v) {　//英語
-    
-        $('.'+v).flicker({
-            'reps': 2, 
-            'pause': 200, 
-            'delay': 800,
-             'color': '#FFDDFF'     
-           
-        });
-        
-         /*'reps': 2, //点滅する回数です。
-            'pause': 200, //点滅して色がついている時の時間の長さです'color': '#CCFFCC'   
-            'delay': 800, //点滅する間隔です
-            'color': '#e55' //色を設定できます*/
-        
-}  
-
-
-function tenmetut(v) {　//翻訳完了！
-    
-        $('.'+v).flicker({
-            'reps': 5, 
-            'pause': 200, 
-            'delay': 800,
-             'color': '#CCFFFF'     
-           
-        });
-        
-         /*'reps': 2, //点滅する回数です。
-            'pause': 200, //点滅して色がついている時の時間の長さです'color': '#CCFFCC'   
-            'delay': 800, //点滅する間隔です
-            'color': '#e55' //色を設定できます*/
         
 }  
 
@@ -523,50 +284,8 @@ function tenmetut(v) {　//翻訳完了！
 		
 })(jQuery);
 　　
+    
+　　
 </script>
-
- <!-- 
-class一覧
-up_group
-
-
-
-音声一覧
- 0   Google US English en-US 
- 1   Google UK English Male en-GB 
- 2   Google UK English Female en-GB 
- 3   Google Español es-ES 
- 4   Google Français fr-FR 
- 5   Google Italiano it-IT 
- 6   Google Deutsch de-DE 
- 7   Google 日本人 ja-JP 
- 8   Google 한국의 ko-KR 
- 9   Google 中国的 zh-CN 
- 10  Alex en-US 
- 11  Agnes en-US 
- 12  Albert en-US 
- 13  Bad News en-US 
- 14  Bahh en-US 
- 15  Bells en-US 
- 16  Boing en-US 
- 17  Bruce en-US 
- 18  Bubbles en-US 
- 19  Cellos en-US 
- 20  Deranged en-US 
- 21  Fred en-US
- 22  Good News en-US 
- 23  Hysterical en-US 
- 24  Junior en-US 
- 25  Kathy en-US 
- 26  Pipe Organ en-US 
- 27  Princess en-US 
- 28  Ralph en-US 
- 29  Trinoids en-US 
- 30  Vicki en-US 
- 31  Victoria en-US 
- 32  Whisper en-US 
- 33  Zarvox en-US  -->      
-
-
 
 
